# ai_sprayer

./: .gitignore  HARDWARE.md  README.md  pyproject.toml  test.ipynb
src/aisprayer/: __main__.py  aisprayer.py  camera.py  config.yaml  config_handler.py  detection.py  frontend.py  interface_helper.py  main.py  runner.py  sprayer.py  telegram.py
src/aisprayer/templates/: base.html  config.html  detections.html  index.html
